plugins {
    id "java"
    id "application"
    id "org.openjfx.javafxplugin" version "0.1.0"
    id "com.gluonhq.gluonfx-gradle-plugin" version "1.0.28"
}

group = "com.mystic"
version = "3.0.0"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenCentral()
}

java {
    modularity.inferModulePath = false
}

javafx {
    version = "21.0.1"
    modules = ["javafx.controls", "javafx.fxml", "javafx.graphics"]
}

application {
    mainClass = "com.mystic.tarotboard.TarotBoard"

    applicationDefaultJvmArgs = [
            "--enable-native-access=javafx.graphics"
    ]
}

javafx {
    version = "21.0.1"
    modules = [
            "javafx.controls",
            "javafx.fxml",
            "javafx.graphics"
    ]
}

dependencies {
    implementation "com.vladsch.flexmark:flexmark-all:0.64.8"
    implementation "com.google.code.gson:gson:2.10.1"
}

def targetPlatform = project.findProperty("target") ?: "host"

gluonfx {
    target = targetPlatform

    attachConfig {
        version = "4.0.19"
        services "lifecycle", "display", "statusbar", "storage"
    }

    graalvmHome = System.getenv("GRAALVM_HOME")
}